# codecrafters-git-cpp

./: .gitignore  CMakeLists.txt  ExampleReposToClone.txt  INTERNALS.md  README.md  request.packet  test-hash.txt  vcpkg.json
src/: Server.cpp
src/gitt/: CloneTypes.h  DataSource.cpp  Datasource.h  Ref.cpp  Ref.h  clone.cpp  clone.h  commands.cpp  commands.h  constants.h  gitt.sln  gitt.vcxproj  gitt.vcxproj.filters  infrastructure.cpp  infrastructure.h  pear.txt  utilities.cpp  utilities.h  utilities.h~RF704276.TMP
